# portscanx

./: Cargo.toml  README.md  makefile
.github/workflows/: format.yml  release.yml  test.yml
src/: cli.rs  config.rs  lib.rs  main.rs
src/output/: csv.rs  json.rs  mod.rs  terminal.rs
src/scanner/: ip.rs  mod.rs  port.rs  service.rs
tests/: cli.rs  ip_parser.rs  port_scan.rs
