[package]
name = "portscanx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "*", features = ["derive"] }
futures = "*"
ipnet = "*"
owo-colors = "4.2.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }

[dev-dependencies]
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
assert_cmd = "*"
predicates = "*"
